--- a/index.css
+++ b/index.css
@@ -47,9 +47,39 @@ body {
     line-height: 1.7;
     font-size: 1.05rem;
     margin-bottom: 1.5rem;
+    font-weight: 270;
   }
   
   .underline {
     border-bottom: 1px solid #aaa;
   }
   
+  @media (max-width: 500px) {
+    .container {
+        max-width: 700px;
+        margin: 100px auto;
+        padding: 0 0px;
+      }
+    
+    body {
+      margin: 0 40px;
+    }
+  
+    header h1 {
+      font-size: 4rem;
+    }
+  
+    .top-links {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .right-links {
+      margin-top: 10px;
+    }
+  
+    main p {
+      font-size: 1rem;
+      font-weight: 250;
+    }
+  }
