--- a/index.css
+++ b/index.css
@@ -54,6 +54,23 @@ body {
     border-bottom: 1px solid #aaa;
   }
   
+  .cursor {
+    pointer-events: none;
+margin: 0; padding: 0;}
+    
+    .cursor ball {
+      position: fixed;
+      top: 0;
+      left: 0;
+      mix-blend-mode: difference;
+      z-index: 1000;}
+      
+      .cursor circle {
+        fill: #f7f8fa;
+      }
+    
+  
+
   @media (max-width: 500px) {
     .container {
         max-width: 700px;
