--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0px 50px;
     padding: 0;
-    background-color: #023b66; /* soft blue */
+    background-color: #05355d; /* soft blue */
     font-family: IBM Plex Sans, sans-serif;
     color: #ffffff;
   }
@@ -24,7 +24,7 @@ body {
     justify-content: space-between;
     align-items: center;
     font-size: 0.9rem;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #e0e0e0;
     padding-bottom: 0.5rem;
     margin-bottom: 2rem;
   }
@@ -53,23 +53,7 @@ body {
   .underline {
     border-bottom: 1px solid #aaa;
   }
-  
-  .cursor {
-    pointer-events: none;
-margin: 0; padding: 0;}
-    
-    .cursor ball {
-      position: fixed;
-      top: 0;
-      left: 0;
-      mix-blend-mode: difference;
-      z-index: 1000;}
-      
-      .cursor circle {
-        fill: #f7f8fa;
-      }
-    
-  
+
 
   @media (max-width: 500px) {
     .container {
